Added job ping to yaml and controller.
